Fix: fix overlay button layout on laptop screen used flex wrap so they fit on screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,13 @@ ul {
     text-align: center;
 }
 
+.flex-wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 /* drop down to alert user of important info */
 #notification {
     display: flex;
@@ -111,7 +118,7 @@ main {
 
 /*overlay at the start of the game */
 #overlay {
-    position: absolute;
+    position: fixed;
     top:0;
     width: 100%;
     height: 100%;
